#1243: Fix bug on Firefox browser with map section

--- a/src/styles/emergency/_global.scss
+++ b/src/styles/emergency/_global.scss
@@ -315,6 +315,10 @@ a.response__doc__item {
     top: -2px;
     width: 300px;
   }
+
+  li {
+    width: 100%;  
+  }
 }
 
 .emergency__response__search {
